fix(context-menu): fix context menu spacing

--- a/src/styles/_jfReportsPages.scss
+++ b/src/styles/_jfReportsPages.scss
@@ -156,7 +156,7 @@
   color: #fff;
   display: block;
   position: absolute;
-  width: 154px;
+  width: 165px;
   z-index: 10;
   box-shadow: 0 0 8px 1px rgba(0, 0, 0, 0.2);
 }
@@ -171,6 +171,7 @@
   height: 45px;
   width: 100%;
   font-size: 0.875rem;
+  padding-left: 14px;
 
   .contextMenu-icon {
     margin-right: 9px;
